Fix mascot overlap: position at 460px to create 100px overlap
Calculation:
- Text column width: 560px (min(560px, 52%) on 1200px container)
- Text column ends at: 560px
- For 100px overlap: mascot starts at 560px - 100px = 460px
- Mascot extends from 460px to 1000px, overlapping text column (0-560px) by 100px
- Updated large screen breakpoint to left: 500px for larger mascot

--- a/styles.css
+++ b/styles.css
@@ -148,7 +148,7 @@ body {
 
 .hero-mascot {
     position: absolute;
-    left: 480px;
+    left: 460px;
     top: 50%;
     width: min(42vw, 540px);
     transform: translateY(-50%);
@@ -623,7 +623,7 @@ section {
 @media (min-width: 1400px) {
     .hero-mascot {
         width: 580px;
-        left: 520px;
+        left: 500px;
     }
 }
 
